<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">
       <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentpwd_et"
        android:hint="@string/current_pwd"
        android:background="@android:drawable/editbox_background_normal"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newpwd_et"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/new_pwd"
        android:padding="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/submit_btn"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/output_tv"/>

</LinearLayout>

</ScrollView>

