<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">
        <EditText
            android:id="@+id/panelid_et"
            android:hint="@string/panelId_id_hint"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:drawable/editbox_background"/>
        <CheckBox
            android:id="@+id/panelid_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/panelid_cb_title"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="onSubmitClick"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"></View>
    <TextView
        android:id="@+id/get_survey_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_container"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_survey_output">
    </ListView>

</RelativeLayout>